--- a/wechat/src/main/webapp/xcview/html/edit_address.html
+++ b/wechat/src/main/webapp/xcview/html/edit_address.html
@@ -229,21 +229,20 @@
 </body>
 <!--公用弹框 -->
 <link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
-
-<script type="text/javascript" src="/xcview/js/common/personCommon.js"></script>
-
-<!-- <script src="/xcview/js/city.js"></script> -->
-<script src="/xcview/js/mui_city.js"></script>
-<script src="/xcview/js/common/picker.min.js"></script>
-</html>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="/xcview/js/common/personCommon.js"></script>
+<!-- <script src="/xcview/js/city.js"></script> -->
+<script src="/xcview/js/common/mui_city.js"></script>
+<script src="/xcview/js/common/picker.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/common.js"></script>
-<script src="/xcview/js/common/jquery.min-2.1.1.js" type="text/javascript"></script>
 <script src="/xcview/js/common/iscroll-zoom.js"></script>
 <script src="/xcview/js/common/hammer.js"></script>
 <script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>
 <script type="text/javascript" src="/xcview/js/address.js"></script>  
+</html>
+
+
 <!--<script src="/xcview/js/common/js.js"></script>-->
 
 <script>
