专辑页课程调整

--- a/wechat/src/main/webapp/xcview/html/live_select_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_select_album.html
@@ -32,14 +32,17 @@
 		</div>
 	</div>
 	<!--视频-->
-	<div class="play_video" onclick="btn_album_page()">
-		<!--<div class="video_prompt">
-			暂未开播
-		</div>-->
-		<div class="video_prompt_open">
-			<img src="../images/play_btn.png" style="display: block;" />
+	<div class="play_video_fiexd">
+		<div class="play_video" onclick="btn_album_page()">
+			<!--<div class="video_prompt">
+				暂未开播
+			</div>-->
+			<div class="video_prompt_open">
+				<img src="../images/play_btn.png" style="display: block;" />
+			</div>
 		</div>
 	</div>
+	<div class="hide_height"></div>
 	<!--主讲人-->
 	<div class="speak_people" id="speak_people">
 		<script type="text/html" id="data_people">	
