--- a/wechat/src/main/webapp/xcview/html/live_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_album.html
@@ -105,16 +105,15 @@
 		</div>
 	</div>
 	<!--视频-->
-	<div class="play_video">
-		<div id="video_box"></div>
-				<!--<div id="video_v"></div>-->
-		<!--<div class="video_prompt">
-			暂未开播
-		</div>-->
-		<div class="video_prompt_open">
-			<img src="../images/play_btn.png"/>
+	<div class="play_video_fiexd">
+		<div class="play_video">
+			<div id="video_box"></div>
+			<div class="video_prompt_open">
+				<img src="../images/play_btn.png"/>
+			</div>
 		</div>
 	</div>
+	<div class="hide_height"></div>
 	<!--主讲人-->
 	<div class="speak_people" id="speak_people">
 		<script type="text/html" id="data_people">	
