修改学堂部分样式

--- a/pc/online-web/src/main/webapp/web/html/school/school-recommend.html
+++ b/pc/online-web/src/main/webapp/web/html/school/school-recommend.html
@@ -80,7 +80,7 @@
 							</a>
 						</div>		
 						<div class="course clearfix">
-							<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
+							<!--<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">-->
 							<a style="cursor:pointer" href="/course/courses/611" target="_blank">
 								<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
 								<div class="detail">
@@ -94,7 +94,7 @@
 							</a>
 						</div>
 						<div class="course clearfix">
-							<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
+							<!--<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">-->
 							<a style="cursor:pointer" href="/course/courses/611" target="_blank">
 								<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
 								<div class="detail">
