首页添加轮播图

--- a/pc/online-web/src/main/webapp/web/html/school/school-recommend.html
+++ b/pc/online-web/src/main/webapp/web/html/school/school-recommend.html
@@ -27,7 +27,24 @@
 		<div class="wp">
 			<div class="wrap-left z">
 				<div class="wrap-banner">
-					<img src="../../images/banner-wrap.jpg" alt="广告图"/>
+					<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+					  <ol class="carousel-indicators">
+					    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+					    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+					  </ol>
+					  <div class="carousel-inner" role="listbox">
+					    <div class="item active">
+					    	<a href="">
+					     		<img src="../../images/banner-wrap.jpg" alt="广告图">
+					     	</a>
+					    </div>
+					    <div class="item">
+					     	<a href="">
+					     		<img src="../../images/banner-wrap.jpg" alt="广告图">
+					     	</a>
+					    </div>
+					  </div>	
+					</div>
 				</div>
 				<div class="physic-type">
 					<ul>
