--- a/wechat/src/main/webapp/xcview/html/course_list.html
+++ b/wechat/src/main/webapp/xcview/html/course_list.html
@@ -93,7 +93,7 @@
 				   	    				{{if item.watchState == 1}}
 	            							<p class="p0" style="color: #F97B49;margin-top: -0.05rem;">免费</p>
 	            							{{else}}
-											<p class="p0" style="margin-top: -0.02rem;"><span>{{item.currentPrice}}</span><span class='span0_span'>熊猫币</span></p>
+											<p class="p0" style="margin-top: -0.02rem;font-size0.24rem;margin-top: 0.04rem;"><span>{{item.currentPrice}}</span><span class='span0_span'>熊猫币</span></p>
             							{{/if}}
 				   	    				
 				   	    				<!--<p class="p0"><span>9000</span>熊猫币</p>-->
