--- a/wechat/src/main/webapp/xcview/html/live_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_album.html
@@ -146,7 +146,7 @@
 						<img src="../images/xing5.png"/>
 					
 						{{/if}}
-						<a href="javascript:;"><span id="criticizeCountId">{{criticizeCount}}</span>评论</a>
+						<a href="javascript:;"><span id="criticizeCountId">{{criticizeCount}}</span>评价</a>
 						<img class="jiantou" src="../images/video_review.png"/>
 					</li>
 				</ul>
@@ -232,7 +232,7 @@
 <!--详情结束-->
 	<!--评论-->
 	<div class="wrap_comment_title" onclick="btn_allComment()">
-		<p>评论</p>
+		<p>评价</p>
 		<span>
 			<img src="../images/video_review.png"/>
 		</span>
