--- a/wechat/src/main/webapp/xcview/html/live_play.html
+++ b/wechat/src/main/webapp/xcview/html/live_play.html
@@ -39,7 +39,7 @@
 						<p>直播预告</p>
 					{{/if}}
 					{{if lineState == 3}}
-						<p>回放课程</p>
+						<p>直播回放</p>
 					{{/if}}
 				</script>
 			</div>
@@ -114,16 +114,16 @@
 						{{else if startLevel == 5}}
 						<img src="../images/xing5.png"/>
 						{{/if}}
-						<a href="javascript:;">共<span id="criticizeCountId">{{criticizeCount}}</span>条评论</a>
+						<a href="javascript:;">共<span id="criticizeCountId">{{criticizeCount}}</span>条评价</a>
 						<img class="jiantou" src="../images/video_review.png"/>
 					</li>
 				</ul>
 				<ul class="playTime playTimes z" onclick="window.location='live_personal.html?userLecturerId={{userLecturerId}}'">
 					<li><img src="{{headImg}}" style="width:0.6rem;height:0.6rem;border-radius: 60px;" /><span style="margin-top: 0.15rem;">{{heir}}</span></li>
-					<li style="margin-top: 0.18rem;">
+					<li style="margin-top: 0.18rem;float:right;">
 						<!--<a href="live_personal.html?userLecturerId={{userLecturerId}}">-->
 						<a href="javascript: ;">
-							<img src="../images/video_review.png" style="width: 0.15rem; height: 0.25rem; margin-right: 0.26rem;"  />
+							<img src="../images/video_review.png" style="width: 0.15rem; height: 0.25rem; margin-right: 0rem;"  />
 						</a>
 					</li>
 				</ul>
@@ -202,7 +202,7 @@
 	<!--评论-->
 	<div class="wrap_comment_title" onclick="btn_allComment()">
 		<p class="border"></p>
-		<p>评论</p>
+		<p>评价</p>
 		<span>
 			<img src="../images/video_review.png" />
 		</span>
