--- a/wechat/src/main/webapp/xcview/html/school_play.html
+++ b/wechat/src/main/webapp/xcview/html/school_play.html
@@ -75,7 +75,7 @@
 						{{else if startLevel == 5}}
 						<img src="../images/xing5.png"/>					
 						{{/if}}
-						<a href="javascript:;">共{{criticizeCount}}条评论</a>
+						<a href="javascript:;">共{{criticizeCount}}条评价</a>
 						<img class="jiantou" src="../images/video_review.png"/>
 					</li>
 				</ul>
@@ -164,7 +164,7 @@
 	<!--评论-->
 	<div class="wrap_comment_title" onclick="btn_allComment()">
 		<p class="border"></p>
-		<p>评论</p>
+		<p>评价</p>
 		<span>
 			<img src="../images/video_review.png" />
 		</span>
