专辑播放页--新ui修改。  学习课程--简介，修改为课程介绍

--- a/wechat/src/main/webapp/xcview/html/live_select_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_select_album.html
@@ -125,7 +125,7 @@
 			<div class="my_synopsis">
 				<ul>
 					<li class="border"></li>
-					<li>简介</li>
+					<li>课程介绍</li>
 				</ul>
 			</div>		
 		</div>
