--- a/wechat/src/main/webapp/xcview/html/school_audio.html
+++ b/wechat/src/main/webapp/xcview/html/school_audio.html
@@ -147,7 +147,7 @@
 				<li class="z">
 					<p></p>
 				</li>
-				<li>简介</li>
+				<li>课程介绍</li>
 				<li class="y" style="float: right;">
 					<p></p>
 				</li>
@@ -169,6 +169,7 @@
 <!--详情结束-->
 	<!--评论-->
 	<div class="wrap_comment_title" onclick="btn_allComment()">
+		<p class="border"></p>
 		<p>评论</p>
 		<span>
 			<img src="../images/video_review.png" />
