专辑评价--旁边三角

--- a/wechat/src/main/webapp/xcview/html/school_audio.html
+++ b/wechat/src/main/webapp/xcview/html/school_audio.html
@@ -33,7 +33,7 @@
 <div class="wp">
 	<div class="wrap-header">
 		<div class="header">		
-			<p>课程</p>
+			<p>专辑课程</p>
 			<div class="arror_return z" onclick="common_share_backs()"> 
 			<!-- <div class="arror_return z" onclick="javascript:window.history.back();return false;">-->					
 				<img src="../images/back icon.png" />
@@ -81,8 +81,7 @@
 						{{else if startLevel == 5}}
 						<img src="../images/xing5.png"/>
 						{{/if}}
-						<a href="javascript:;">{{criticizeCount}}评论</a>
-						<img class="jiantou" src="../images/video_review.png"/>
+						<a href="javascript:;">共{{criticizeCount}}条评价</a>
 					</li>
 				</ul>
 			</div>
