--- a/pc/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/pc/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -11,6 +11,9 @@
 		<meta name="renderer" content="webkit">
 		<meta name="baidu-site-verification" content="UHaAQAeAQF" />
 		<!--头部/底部样式-->
+
+	
+		
 		<link rel="stylesheet" href="/web/html/personal-center/center-header/header.css" />
 		<link rel="stylesheet" href="/web/css/footer.css" />
 		<link rel="stylesheet" href="/web/font/iconfont.css" />
@@ -22,7 +25,8 @@
 		
 		<!--登陆的样式-->
 		<link rel="stylesheet" href="/web/css/mylogin.css" />
-		<link href="/web/bootstrap-select/bootstrap.min.css" rel="stylesheet">		
+		<link href="/web/css/bootstrap.min.css" rel="stylesheet">
+		
 		<link rel="stylesheet" href="/web/css/personal-center/personal-index.css">		
 	</head>
 
@@ -91,14 +95,14 @@
 					<!-- Contenedor -->
 						<ul id="accordion" class="accordion">
 							<li>
-								<div class="link"><i class="iconfont icon-zaixiankecheng"></i>学习中心<i class="fa fa-chevron-down"></i></div>
+								<div class="link"><i class="iconfont icon-zaixiankecheng"></i>学习中心<span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></div>
 								<ul class="submenu">
 									<li><a href="javascript:;">我的课程</a></li>
 									<li><a href="javascript:;">关注的主播</a></li>
 								</ul>
 							</li>
 							<li>
-								<div class="link"><i class="iconfont icon-zaixiankecheng"></i>问答与论坛<i></i></div>
+								<div class="link"><i class="iconfont icon-zaixiankecheng"></i>问答与论坛<span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></div>
 								<ul class="submenu">
 									<li><a href="#">我的问答</a></li>
 									<li><a href="#">我的论坛</a></li>
@@ -106,35 +110,35 @@
 								</ul>
 							</li>
 							<li>
-								<div class="link"><i class="iconfont icon-zaixiankecheng"></i>我的订单<i class="fa fa-chevron-down"></i></div>
+								<div class="link"><i class="iconfont icon-zaixiankecheng"></i>我的订单</div>
 								<ul class="submenu">
 									<!--<li><a href="javascript:;">课程收益</a></li>
 									<li><a href="javascript:;">礼物收益</a></li>-->
 								</ul>
 							</li>
 							<li>
-								<div class="link"><i class="iconfont icon-zaixiankecheng"></i>我的钱包<i class="fa fa-chevron-down"></i></div>
+								<div class="link"><i class="iconfont icon-zaixiankecheng"></i>我的钱包</div>
 								<ul class="submenu">
 									<!--<li><a href="javascript:;">认证信息</a></li>
 									<li><a href="javascript:;">主播信息</a></li>-->
 								</ul>
 							</li>
 							<li>
-								<div class="link"><i class="iconfont icon-zaixiankecheng"></i>个人资料<i class="fa fa-chevron-down"></i></div>
+								<div class="link"><i class="iconfont icon-zaixiankecheng"></i>个人资料</div>
 								<ul class="submenu">
 									<!--<li><a href="javascript:;">认证信息</a></li>
 									<li><a href="javascript:;">主播信息</a></li>-->
 								</ul>
 							</li>
 							<li>
-								<div class="link"><i class="iconfont icon-zaixiankecheng"></i>消息<i class="fa fa-chevron-down"></i></div>
+								<div class="link"><i class="iconfont icon-zaixiankecheng"></i>消息</div>
 								<ul class="submenu">
 									<!--<li><a href="javascript:;">认证信息</a></li>
 									<li><a href="javascript:;">主播信息</a></li>-->
 								</ul>
 							</li>
 							<li>
-								<div class="link"><i class="iconfont icon-zaixiankecheng"></i>意见反馈<i class="fa fa-chevron-down"></i></div>
+								<div class="link"><i class="iconfont icon-zaixiankecheng"></i>意见反馈</div>
 								<ul class="submenu">
 									<!--<li><a href="javascript:;">认证信息</a></li>
 									<li><a href="javascript:;">主播信息</a></li>-->
@@ -164,6 +168,18 @@
 							</div>
 							<div class="content4 hide" >
 								<div>内容4-1</div>
+								<!--<div class="hide">内容4-2</div>-->
+							</div>
+							<div class="content5 hide" >
+								<div>内容5-1</div>
+								<!--<div class="hide">内容4-2</div>-->
+							</div>
+							<div class="content6 hide" >
+								<div>内容6-1</div>
+								<!--<div class="hide">内容4-2</div>-->
+							</div>
+							<div class="content7 hide" >
+								<div>内容7-1</div>
 								<!--<div class="hide">内容4-2</div>-->
 							</div>
 						</div>
