--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -583,7 +583,6 @@ $(function(){
 <!--这段JS就是自动检测窗口尺寸大小的，动态改变html的font-size的大小-->
 
 <!-- <script type="text/javascript" src="/xcview/js/common/jquery-1.8.3.min.js"></script> -->
-
 <script src="/xcview/weihoujs/vhallSDK.js?version=8c159d711182211111111&version=8c159d7822&version=8c159d7822"></script>
 <script src="/xcview/weihoujs/jquery.mCustomScrollbar.concat.min.js"></script>
 <script src="/xcview/weihoujs/underscore-min.js?version=963bd48ea8&version=963bd48ea8&version=963bd48ea8"></script>
@@ -592,9 +591,9 @@ $(function(){
 <!-- <script type="text/javascript" src="/xcview/js/XCh5Pay.js?version=70d6efdacc&version=352ea4ec3e&version=352ea4ec3e"></script> -->
 <script type="text/javascript"
 	src="/xcview/js/common/strophe.js?version=1ddc9fdf23&version=1ddc9fdf23&version=1ddc9fdf23"></script>
-<script type="text/javascript" src="/xcview/js/im/giftSend.js?version=a069a29e1111ca&version=f3dac6e8b1&version=f30bcb705f"></script>
+<script type="text/javascript" src="/xcview/js/im/giftSend.js?version=a069a21119e1111ca&version=f3dac6e8b1&version=f30bcb705f"></script>
 <script type="text/javascript" src="/xcview/js/details_change.js?v=wechat_1.11&version=e700156cca&version=e700156cca&version=e700156cca"></script>
-<script type="text/javascript" src="/xcview/js/details.js?v=wechat_1.111&version=f236b1111e0875&version=b47ca11167429&version=6d40e3898a"></script>
+<script type="text/javascript" src="/xcview/js/details.js?v=wechat_1.111&version=f236111b1111e0875&version=b47ca11167429&version=6d40e3898a"></script>
 
 
 <script type="text/javascript">
