test-wx.ixincheng.com==>test-wx.xczhihui.com

--- a/pc/online-web/src/main/webapp/index.html
+++ b/pc/online-web/src/main/webapp/index.html
@@ -402,7 +402,7 @@
               if(document.location.host=='www.ipandatcm.com' ||document.location.host=='www.ixincheng.com'){
                   wxurl = "http://m.ipandatcm.com";
               }else{
-                  wxurl = "http://test-wx.ixincheng.com";
+                  wxurl = "http://test-wx.xczhihui.com";
               }
               window.location = wxurl;
           }else if(document.location.host=='www.ixincheng.com'){
