--- a/pc/online-web/src/main/webapp/web/html/liveVideoOther.html
+++ b/pc/online-web/src/main/webapp/web/html/liveVideoOther.html
@@ -39,7 +39,7 @@
                 if(document.location.host=='www.ipandatcm.com'){
                     wxurl = "http://m.ipandatcm.com";
                 }else{
-                    wxurl = "http://test-wx.ixincheng.com";
+                    wxurl = "http://test-wx.xczhihui.com";
                 }
 			})();
 			var qrcodeurl = wxurl+"/wx_share.html?shareType=1&shareId="+course_id;
@@ -104,7 +104,7 @@
                     if(document.location.host=='www.ipandatcm.com' ||document.location.host=='www.ixincheng.com' || document.location.host=='ipandatcm.com' ||document.location.host=='ixincheng.com'){
                         wxurl = "http://m.ipandatcm.com/wx_share.html?shareType=1&shareId="+course_id;
                     }else{
-                        wxurl = "http://test-wx.ixincheng.com/wx_share.html?shareType=1&shareId="+course_id;
+                        wxurl = "http://test-wx.xczhihui.com/wx_share.html?shareType=1&shareId="+course_id;
                     }
                     window.location = wxurl;
                 }else if(document.location.host=='www.ixincheng.com'){
