--- a/pc/online-web/src/main/webapp/classroom.html
+++ b/pc/online-web/src/main/webapp/classroom.html
@@ -138,7 +138,7 @@
               if(document.location.host=='www.ipandatcm.com'){
                   wxurl = "http://m.ipandatcm.com";
               }else{
-                  wxurl = "http://test-wx.ixincheng.com";
+                  wxurl = "http://test-wx.xczhihui.com";
               }
               window.location = wxurl;
           }
