--- a/pc/online-web/src/main/webapp/web/html/livePlayBack.html
+++ b/pc/online-web/src/main/webapp/web/html/livePlayBack.html
@@ -561,7 +561,7 @@
                 if(document.location.host=='www.ipandatcm.com'){
                     wxurl = "http://m.ipandatcm.com";
                 }else{
-                    wxurl = "http://test-wx.ixincheng.com";
+                    wxurl = "http://test-wx.xczhihui.com";
                 }
 			})();
 			//-- shareType 分享类型 1 课程  2 主播
@@ -624,7 +624,7 @@
                     if(document.location.host=='www.ipandatcm.com' ||document.location.host=='www.ixincheng.com' || document.location.host=='ipandatcm.com' ||document.location.host=='ixincheng.com'){
                         wxurl = "http://m.ipandatcm.com/wx_share.html?shareType=1&shareId="+course_id;
                     }else{
-                        wxurl = "http://test-wx.ixincheng.com/wx_share.html?shareType=1&shareId="+course_id;
+                        wxurl = "http://test-wx.xczhihui.com/wx_share.html?shareType=1&shareId="+course_id;
                     }
                     window.location = wxurl;
                 }else if(document.location.host=='www.ixincheng.com'){
