--- a/pc/online-web/src/main/webapp/web/html/video.html
+++ b/pc/online-web/src/main/webapp/web/html/video.html
@@ -749,7 +749,7 @@
         if(document.location.host=='www.ipandatcm.com'){
             wxurl = "http://m.ipandatcm.com";
         }else{
-            wxurl = "http://test-wx.ixincheng.com";
+            wxurl = "http://test-wx.xczhihui.com";
         }
 	})();
 	var courseId = $.getUrlParam("courseId");
@@ -811,7 +811,7 @@
             if(document.location.host=='www.ipandatcm.com' ||document.location.host=='www.ixincheng.com' || document.location.host=='ipandatcm.com' ||document.location.host=='ixincheng.com'){
                 wxurl = "http://m.ipandatcm.com/wx_share.html?shareType=1&shareId="+courseId;
             }else{
-                wxurl = "http://test-wx.ixincheng.com/wx_share.html?shareType=1&shareId="+courseId;
+                wxurl = "http://test-wx.xczhihui.com/wx_share.html?shareType=1&shareId="+courseId;
             }
             window.location = wxurl;
         }else if(document.location.host=='www.ixincheng.com'){
