--- a/wechat/src/main/webapp/xcview/html/live_class.html
+++ b/wechat/src/main/webapp/xcview/html/live_class.html
@@ -75,26 +75,26 @@
 						<img src="../images/xing5.png"/>
 					
 						{{/if}}
-						<a href="javascript:;"><span id="criticizeCountId">{{criticizeCount}}</span>评论</a>
-						<img class="jiantou" src="../images/video_review.png"/>
+						<a href="javascript:;"><span id="criticizeCountId">共{{criticizeCount}}</span>条评价</a>
 					</li>
 				</ul>
-			
 			</div>
+			<ul class="playTime z" onclick="window.location='live_personal.html?userLecturerId={{userLecturerId}}'" style="border-bottom: 0;padding: 0.4rem 0 0 0;">
+				<li><img src="{{headImg}}" style="width:0.6rem;height:0.6rem;border-radius: 60px;"/><span style="margin-top: 0.15rem;">{{heir}}</span></li>
+				<li style="margin-top: 0.18rem;">
+					<!--<a href="live_personal.html?userLecturerId={{userLecturerId}}">-->
+					<a href="javascript: ;">
+						<img src="../images/video_review.png" style="width: 0.15rem; height: 0.25rem;"  />
+					</a>
+				</li>
+			</ul>
+			<div class="both"></div>
 		</script>
 	</div>
 	<!--主播/时间-->
 	<div class="wrap_playTime" id="wrap_playTime">
 		<script type="text/html" id="data_name">
-		<ul class="playTime z" onclick="window.location='live_personal.html?userLecturerId={{userLecturerId}}'">
-			<li><img src="../images/population.png"/><span>{{heir}}</span></li>
-			<li>
-				<!--<a href="live_personal.html?userLecturerId={{userLecturerId}}">-->
-				<a href="javascript: ;">
-					<img src="../images/video_review.png" style="width: 0.15rem; height: 0.25rem; margin-right: 0.26rem;"  />
-				</a>
-			</li>
-		</ul>
+		
 		<ul class="playTime z">
 			<li style="float: left;">
 				<img style="margin-top: 0.03rem;" src="../images/Sinatv_time.png"/>
@@ -110,18 +110,12 @@
 		</script>
 	</div>
 <!--详情开始-->
-	<p class="my_details">详情</p>
 	<!--简介-->
 	<div class="wrap_synopsis">	
 		<div class="my_synopsis">
 			<ul>
-				<li class="z">
-					<p></p>
-				</li>
-				<li>简介</li>
-				<li class="y" style="float: right;">
-					<p></p>
-				</li>
+				<li class="border"></li>
+				<li>课程介绍</li>
 			</ul>
 		</div>		
 	</div>
@@ -143,9 +137,8 @@
 	<!--主讲人-->
 		<div class="wrap_speak">		
 			<div class="main_speak">
-				<p></p>
+				<p class="border"></p>
 				<p>主讲人</p>
-				<p></p>
 			</div>		
 		</div>
 	<!--内容-->
@@ -162,7 +155,8 @@
 <!--详情结束-->
 	<!--评论-->
 	<div class="wrap_comment_title" onclick="btn_allComment()">
-		<p>评论</p>
+		<p class="border"></p>
+		<p>评价</p>
 		<span>
 			<img src="../images/video_review.png" />
 		</span>
@@ -180,6 +174,12 @@
 					<div class="user_text">
 						<div class="wrap_userName">
 							<p class="z">{{item.onlineUser.name}}</p>
+							<!--购买者显示-->
+							{{if item.isBuy  }}
+							<div class="wrap_purchaser">
+								<p>已购</p>
+							</div>
+							{{/if}}
 							{{if item.starLevel == 1}}
 							<img class="z" src="../images/xing1_0.png"/>
 							{{else if item.starLevel == 1.5}}
@@ -199,9 +199,9 @@
 							{{else if item.starLevel == 5}}
 							<img class="z" src="../images/xing5.png"/>
 							{{/if}}
-
 						</div>
-						<!--很赞/干货很多-->
+					</div>
+					<!--很赞/干货很多-->
 						<div class="uesr_lable">
 							{{if item.criticizeLable !=null}}
 							<ul>
@@ -251,14 +251,6 @@
 
 							</ul>
 						</div>
-					</div>
-
-					<!--购买者显示-->
-					{{if item.isBuy  }}
-					<div class="wrap_purchaser">
-						<p>购买者</p>
-					</div>
-					{{/if}}
 				</div>
 
 			</div>
@@ -271,18 +263,11 @@
 		<img src="../images/no_comment.png"/>	
 		<p>还没有评价？快来抢沙发呀~</p>
 	</div>
-	
-
-
 			<!--底下评论输入框-->
 			<div class="wrap_user_input">
 				<div class="wrap_input z">
 					<img src="../images/inp_retured.png"/>
 					<span>来点儿神聊</span>
-				</div>
-				<div class="all_returned_num y">
-					<img src="../images/returned.png"/>
-					<p onclick="btn_allComment()">评论<span id="criticizeCount"></span></p>
 				</div>
 			</div>
 
