--- a/wechat/src/main/webapp/xcview/html/school_class.html
+++ b/wechat/src/main/webapp/xcview/html/school_class.html
@@ -79,26 +79,26 @@
 						<img src="../images/xing5.png"/>
 					
 						{{/if}}
-						<a href="javascript:;">{{criticizeCount}}评论</a>
-						<img class="jiantou" src="../images/video_review.png"/>
+						<a href="javascript:;">共{{criticizeCount}}条评价</a>
 					</li>
 				</ul>
 			</div>
+			<ul class="playTime z" onclick="window.location='live_personal.html?userLecturerId={{userLecturerId}}'" style="padding: 0.4rem 0 0 0;border: none;">
+			<!--<ul class="playTime z">-->
+				<li><img src="{{headImg}}" style="width:0.6rem;height:0.6rem;border-radius: 60px;"/><span style="margin-top: 0.15rem;">{{heir}}</span></li>
+				<li style="margin-top: 0.18rem;">
+					<!--<a href="live_personal.html?userLecturerId={{userLecturerId}}">-->
+					<a href="javascript: ;">
+						<img src="../images/video_review.png" style="width: 0.15rem; height: 0.25rem;"  />
+					</a>
+				</li>
+			</ul>
+			<div class="both"></div>
 		</script>
 	</div>
 	<!--主播/时间-->
 	<div class="wrap_playTime" id="wrap_playTime">
 		<script type="text/html" id="data_name">
-		<ul class="playTime z" onclick="window.location='live_personal.html?userLecturerId={{userLecturerId}}'">
-		<!--<ul class="playTime z">-->
-			<li><img src="../images/population.png"/><span>{{heir}}</span></li>
-			<li>
-				<!--<a href="live_personal.html?userLecturerId={{userLecturerId}}">-->
-				<a href="javascript: ;">
-					<img src="../images/video_review.png" style="width: 0.15rem; height: 0.25rem; margin-right: 0.26rem;"  />
-				</a>
-			</li>
-		</ul>
 		<ul class="playTime z">
 			<li style="float: left;">
 				<img style="margin-top: 0.03rem;" src="../images/Sinatv_time.png"/>
@@ -116,14 +116,11 @@
 		</script>
 	</div>
 <!--详情开始-->
-	<p class="my_details">详情</p>
-	
 	<!--主讲人-->
 		<div class="wrap_speak">		
 			<div class="main_speak">
-				<p></p>
+				<p class="border"></p>
 				<p>主讲人</p>
-				<p></p>
 			</div>		
 		</div>
 	<!--内容-->
@@ -144,13 +141,8 @@
 	<div class="wrap_synopsis">	
 		<div class="my_synopsis">
 			<ul>
-				<li class="z">
-					<p></p>
-				</li>
-				<li>简介</li>
-				<li class="y" style="float: right;">
-					<p></p>
-				</li>
+				<li class="border"></li>
+				<li>课程介绍</li>
 			</ul>
 		</div>		
 	</div>
@@ -169,7 +161,8 @@
 <!--详情结束-->
 	<!--评论-->
 	<div class="wrap_comment_title" onclick="btn_allComment()">
-		<p>评论</p>
+		<p class="border"></p>
+		<p>评价</p>
 		<span>
 			<img src="../images/video_review.png" />
 		</span>
@@ -187,6 +180,12 @@
 					<div class="user_text">
 						<div class="wrap_userName">
 							<p class="z">{{item.onlineUser.name}}</p>
+							<!--购买者显示-->
+							{{if item.isBuy  }}
+							<div class="wrap_purchaser">
+								<p>已购</p>
+							</div>
+							{{/if}}
 							{{if item.starLevel == 1}}
 							<img class="z" src="../images/xing1_0.png"/>
 							{{else if item.starLevel == 1.5}}
@@ -208,7 +207,8 @@
 							{{/if}}
 
 						</div>
-						<!--很赞/干货很多-->
+					</div>
+					<!--很赞/干货很多-->
 						<div class="uesr_lable">
 							{{if item.criticizeLable !=null}}
 							<ul>
@@ -258,14 +258,6 @@
 
 							</ul>
 						</div>
-					</div>
-
-					<!--购买者显示-->
-					{{if item.isBuy  }}
-					<div class="wrap_purchaser">
-						<p>购买者</p>
-					</div>
-					{{/if}}
 				</div>
 
 			</div>
