学堂课程页--修改新ui。主播页，医馆添加border

--- a/wechat/src/main/webapp/xcview/html/live_personal.html
+++ b/wechat/src/main/webapp/xcview/html/live_personal.html
@@ -136,6 +136,7 @@
 							<li class="hid_address hide">医馆地址：{{hospital.province}}{{hospital.city}}{{hospital.detailedAddress}}</li>
 						</ul>
 					{{else if lecturerInfo.type == 2}}
+					<span class="border"></span>
 					<span style="font-size: 0.28rem;">医馆</span>
 					<ul class="address_all">
 						<li class="hid_name hide" >医馆名称：{{hospital.name}}</li>
