--- a/wechat/src/main/webapp/xcview/html/bought.html
+++ b/wechat/src/main/webapp/xcview/html/bought.html
@@ -158,7 +158,7 @@
 				</div>
 				<div class="bought_list_right">
 					<div class="bought_list_title">{{item.gradeName}}<br /><span class="span">{{item.name}}</span>
-						<div class="bought_list_size">直播已结束</div>
+						<div class="bought_list_size">直播时间：<span>{{item.startTime.slice(0,16)}}</span></div>
 					</div>
 					
 				</div>
