主播页--课程无内容时添加默认背景图

--- a/wechat/src/main/webapp/xcview/html/live_personal.html
+++ b/wechat/src/main/webapp/xcview/html/live_personal.html
@@ -37,6 +37,7 @@
     	font-size: 0.24rem;
 	}
 </style>
+
 </head>
 <body style="background:#F8F8F8;">
 <div class="wp">
@@ -260,7 +261,10 @@
 			</ul>
 			
 		</div>
-
+		<div class="quie_pics">
+			<img src="../images/no_class.png"/>	
+			<p>该主播暂未发布课程~</p>
+		</div>
 	</div>
 	<!-- 主播课程结束 -->
 	
@@ -509,6 +513,8 @@
 		$(".weixin_ceng").click(function(){
 			$(".weixin_ceng").hide();
 		});
+
+
 	};
 /* 	window.onload = function(){
 		//		点击分享share
