--- a/wechat/src/main/webapp/xcview/html/my_homepage.html
+++ b/wechat/src/main/webapp/xcview/html/my_homepage.html
@@ -44,6 +44,16 @@
 				<div class="both"></div>
 				<img src="" alt="" class="img0" onclick="location.href ='persons.html'" id="smallHeadPhoto" />
 				<p class="p" id="p_name"></p>
+
+				<div class="person_follow">
+					<div class="left_personal z">
+						<p>关注&nbsp;<span id="attentionid">{{focusCount}}</span></p>
+					</div>
+					<div class="separate"></div>			
+					<div class="right_personal y">
+						粉丝&nbsp;<span id="fansid">{{fansCount}}</span>
+					</div>
+				</div>
 				<!-- </script> -->
 			</div>
 		</div>
