我的  关注--粉丝添加

--- a/wechat/src/main/webapp/xcview/html/my_homepage.html
+++ b/wechat/src/main/webapp/xcview/html/my_homepage.html
@@ -47,11 +47,11 @@
 
 				<div class="person_follow">
 					<div class="left_personal z">
-						<p>关注&nbsp;<span id="attentionid">{{focusCount}}</span></p>
+						<p>关注&nbsp;<span id="attentionid"></span></p>
 					</div>
 					<div class="separate"></div>			
 					<div class="right_personal y">
-						粉丝&nbsp;<span id="fansid">{{fansCount}}</span>
+						粉丝&nbsp;<span id="fansid"></span>
 					</div>
 				</div>
 				<!-- </script> -->
