[feature]pc与移动端消息接口

--- a/pc/online-web/src/main/webapp/web/html/personcenter.html
+++ b/pc/online-web/src/main/webapp/web/html/personcenter.html
@@ -617,6 +617,7 @@
 <script type="text/javascript" src="../js/personcenter.js?v=ipandatcm_1.3.1"></script>
 <script type="text/javascript" src="../js/mydata.js?v=ipandatcm_1.3"></script>
 <script src="../js/myanswer.js"></script>
+<script type="text/javascript" src="../js/mynews.js" ></script>
 <script type="text/javascript" src="../js/footer.js"></script>
 <script src="/web/js/placeHolder.js"></script>
 <script src='../js/PersonAsset.js?v=ipandatcm_1.3.1'></script>
