增加访问的列表页的跳转

--- a/pc/online-web/src/main/webapp/web/html/school/curriculum-list.html
+++ b/pc/online-web/src/main/webapp/web/html/school/curriculum-list.html
@@ -31,22 +31,22 @@
 						<li>
 							<dl id="select-kind">
 								<dt>分类 :</dt>
-								<dd class="select-all">全部</dd>
-								<dd>针灸疗法</dd>
-								<dd>格式推拿</dd>
-								<dd>古籍经典</dd>		
-								<dd>诊脉大全</dd>								
+								<dd class="select-all" subject='menuType'>全部</dd>
+								<dd subject='menuType'>针灸疗法</dd>
+								<dd subject='menuType'>格式推拿</dd>
+								<dd subject='menuType'>古籍经典</dd>		
+								<dd subject='menuType'>诊脉大全</dd>								
 								
 							</dl>
 						</li>
 						<li>
 							<dl id="select-style">
 								<dt>类型 :</dt>
-								<dd class="select-all">全部</dd>
-								<dd>视频课程</dd>
-								<dd>直播课程</dd>
-								<dd>线下课程</dd>	
-								<dd>音频课程</dd>																
+								<dd class="select-all" subject='courseType'>全部</dd>
+								<dd subject='courseType'>视频课程</dd>
+								<dd subject='courseType'>直播课程</dd>
+								<dd subject='courseType'>线下课程</dd>	
+								<dd subject='courseType'>音频课程</dd>																
 							</dl>
 						</li>
 						<li>
@@ -77,14 +77,6 @@
 						<li>
 							<dl id="select-condition">
 								<dt>筛选条件 :</dt>
-							
-								<!--<dd>
-									<p class="wrap-border">
-										<span>分类 : </span>
-										<span class="select-text">筛选条件</span>
-										<span class="selecy-close">x</span>
-									</p>
-								</dd>								-->
 							</dl>
 							<p class="author-search z">
 								<input type="text" id="search-text" value="" placeholder="如：朱小宝" />
