--- a/pc/online-web/src/main/webapp/web/html/school/school-live.html
+++ b/pc/online-web/src/main/webapp/web/html/school/school-live.html
@@ -51,7 +51,7 @@
 					<div class="content-class">	
 						<div class="wrap-title">
 							<span>最新课程</span>
-							<p><a href="/web/html/school/curriculum-list.html">更多</a><img src="../../images/rili_icon.png" alt="箭头" /> </p>
+							<p><a href="/web/html/school/curriculum-list.html?menuType=newCourse">更多</a><img src="../../images/rili_icon.png" alt="箭头" /> </p>
 						</div>
 						<div class="course clearfix">
 							<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
