--- a/pc/online-web/src/main/webapp/web/html/school/curriculum-list.html
+++ b/pc/online-web/src/main/webapp/web/html/school/curriculum-list.html
@@ -18,8 +18,11 @@
 		<!--登陆的bootstrap样式-->
 			<link rel="stylesheet" href="/web/css/mylogin.css" />
 			<link href="/web/css/bootstrap.min.css" rel="stylesheet">
-
 		<!--登陆的bootstrap样式-->
+		<!--分页部分start-->
+		<link rel="stylesheet" href="/web/css/componet.css" />
+		<link rel="stylesheet" href="/web/css/componet-pages.css" />
+		<!--分页部分end-->
 			<link rel="stylesheet" href="/web/css/school/curriculum-list.css"  />
 	</head>
 	<body>
@@ -173,7 +176,17 @@
 						</a>
 					</div>
 
-					<!--<div class="clearfix"></div>-->
+					<!--分页部分start-->
+						<div class="doctors_pages pages hide" style="margin-top: 20px;">  <!--如需要复制分页doctors_pages要改类名并在JS里对应-->
+							<div id="Pagination_doctors" class="pagination-pages"></div>	<!--如需要复制分页Pagination_doctors要改类名并在JS里对应-->
+							<div class="searchPage">
+								<span class="page-sum">共<strong class="allPage">0</strong>页</span>
+								<span class="page-go">跳转<input type="text" style="width: 37px;" min="1" max="">页</span>
+								<a href="javascript:;" class="page-btn">确定</a>
+							</div>
+						</div>
+					<!--分页部分end-->
+
 				</div>
 			</div>
 			
