添加更多按钮

--- a/pc/online-web/src/main/webapp/web/html/school/details-video.html
+++ b/pc/online-web/src/main/webapp/web/html/school/details-video.html
@@ -185,6 +185,11 @@
 							</div>
 							
 			<!--一个完整的评论内容结束-->
+				<!--更多按钮添加-->
+						<div class="more-evaluate">
+							<button type="button">更多</button>
+						</div>
+				<!--更多按钮添加结束-->
 						</div>	
 					</div>
 		<!--常见问题-->					
