添加 pc 播放专辑视频 页面

--- a/pc/online-web/src/main/webapp/web/html/liveVideo.html
+++ b/pc/online-web/src/main/webapp/web/html/liveVideo.html
@@ -749,6 +749,9 @@
 <!-- <script src='http://cdn.bootcss.com/jquery/1.9.1/jquery.min.js'></script> -->
 		<script src="/web/js/liveVideo/liveVideo.js?v=ipandatcm_1.3"></script>
 		<script src="/web/js/liveVideo/liveVideoSDK.js?v=ipandatcm_1.3"></script>
+
+
+<div style="">你好</div>
 </body>
 <script>
 			$("body").append('<div class="modal" id="login" data-backdrop="static">' +
