--- a/pc/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/pc/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -118,7 +118,7 @@
 									<li><a href="javascript:;">礼物收益</a></li>-->
 								</ul>
 							</li>
-							<li>
+							<li id="wallet-btn">
 								<div class="link"><i class="icomoon-icon-zichan"></i>我的钱包</div>
 								<ul class="submenu">
 									<!--<li><a href="javascript:;">认证信息</a></li>
@@ -736,8 +736,68 @@
 														<td>2018-12-28 15:00</td>
 														<td>苹果内购</td>
 													</tr>
+													<tr>
+														<td>180320181450MHJCx394</td>
+														<td>+200</td>
+														<td>购买课程【小宝中医带你快速入门学针灸合…</td>
+														<td>2018-12-28 15:00</td>
+														<td>苹果内购</td>
+													</tr>
 												</table>
 											</div>
+										</div>
+									</div>
+									<!--充值-->
+									<div class="recharge-wrap hide">
+										<div class="recharge-explain">
+												<p class="z explain">选择充值额度<span>兑换比例说明：1元=10熊猫币</span></p>
+												<p class="y balance">余额：20熊猫币</p>
+										</div>
+										<div class="select-pay-money">
+											<ul>
+												<li class="select-money">
+													<p>100熊猫币</p>
+													<p>¥ 10</p>
+												</li>
+												<li>
+													<p>500熊猫币</p>
+													<p>¥ 50</p>
+												</li>
+												<li>
+													<p>1000熊猫币</p>
+													<p>¥ 100</p>
+												</li>
+												<li>
+													<p>2000熊猫币</p>
+													<p>¥ 200</p>
+												</li>
+												<li>
+													<p>5000熊猫币</p>
+													<p>¥ 500</p>
+												</li>
+											</ul>
+										</div>
+										<div class="main-bottom">
+											<h4>选择支付方式</h4>
+											<ul class="select-pay">
+												<li class="select-confirm">
+													<div class="pay-logo">
+														<img src="../../images/live/alipay.png">
+													</div>
+													<p>支付宝</p>
+													<span class="icon-sure"></span>
+												</li>
+												<li>
+													<div class="pay-logo">
+														<img src="../../images/weixin.png">
+													</div>
+													<p>微信</p>
+													<span class="icon-sure hide"></span>
+												</li>
+											</ul>
+										</div>
+										<div class="recharge-box">
+											<button type="button">立即充值</button>
 										</div>
 									</div>
 									
