[feature]信鸽推送接入以及优化遗留代码注入方式

--- a/pc/online-web/src/main/webapp/web/html/personcenter.html
+++ b/pc/online-web/src/main/webapp/web/html/personcenter.html
@@ -638,9 +638,9 @@
         //判断顶部消息颜色
         setInterval(function(){
         	if(window.localStorage.personcenter == 'mynews'){
-        		$('.message').css('color','#2cb82c');
+        		$('.xgMessage').css('color','#2cb82c');
         	}else{
-        		$('.message').css('color','#ccc');
+        		$('.xgMessage').css('color','#ccc');
         	}
         },500)
         
